--- a/reference.bib
+++ b/reference.bib
@@ -57,14 +57,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
-
-
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -74,6 +73,7 @@
   number  = {2},
   year    = {2020}
 }
+
 
 
 @inproceedings{Afouras2018,
@@ -175,6 +175,7 @@
   number  = {2}
 }
 
+
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
   title   = {Point Convolutional Neural Networks by Extension Operators},
@@ -223,7 +224,6 @@
   year    = {2016}
 }
 
-
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
@@ -241,12 +241,12 @@
   number  = {12}
 }
 
+
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
   publisher = {Citeseer}
 }
-
 
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
@@ -255,13 +255,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
   author    = {Bai, Zechen and Wang, Zhigang and Wang, Jian and Hu, Di and Ding, Errui},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
@@ -308,6 +308,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
@@ -315,14 +316,12 @@
   year      = {2019}
 }
 
-
 @inproceedings{Belkin2009,
   title     = {Constructing Laplace operator from point clouds in $R^d$},
   author    = {Belkin, Mikhail and Sun, Jian and Wang, Yusu},
   booktitle = {ACM-SIAM Symposium on Discrete algorithms},
   year      = {2009}
 }
-
 
 
 @article{Belongie2002,
@@ -333,13 +332,14 @@
   year    = {2002}
 }
 
+
+
 @inproceedings{Bendels2003,
   author    = {Bendels, G. H. and Klein, R.},
   title     = {Mesh Forging: Editing of {3D}-Meshes Using Implicitly Defined Occluders},
   year      = {2003},
   booktitle = {SGP}
 }
-
 
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
@@ -370,6 +370,7 @@
   year    = {1999}
 }
 
+
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
   title   = {A method for registration of {3D} shapes},
@@ -392,7 +393,6 @@
   booktitle = CVPR,
   year      = {2014}
 }
-
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -431,6 +431,7 @@
   number  = {6}
 }
 
+
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -440,15 +441,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
   title     = {Learning shape correspondence with anisotropic convolutional neural networks},
   booktitle = NeurIPS,
   year      = {2016}
 }
-
-
 
 
 @article{Botsch2008,
@@ -472,6 +470,7 @@
 
 
 
+
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
   title   = {Deep learning for robust normal estimation in unstructured point clouds},
@@ -481,13 +480,14 @@
   number  = {5}
 }
 
+
+
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
   title     = {{SHREC 2011}: Robust feature detection and description benchmark},
   booktitle = {Proc. of the 4th Eurographics Conference on 3D Object Retrieval},
   year      = {2011}
 }
-
 
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
@@ -496,6 +496,7 @@
   publisher = {CRC press}
 }
 
+
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
   title     = {Generative and discriminative voxel modeling with convolutional neural networks},
@@ -503,14 +504,14 @@
   year      = {2016}
 }
 
-
-
 @inproceedings{Brody2022,
   author    = {Shaked Brody and Uri Alon and Eran Yahav},
   booktitle = ICLR,
   title     = {How Attentive are Graph Attention Networks?},
   year      = {2022}
 }
+
+
 
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
@@ -534,8 +535,6 @@
   year    = {2021}
 }
 
-
-
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
@@ -555,6 +554,7 @@
 }
 
 
+
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
   title   = {Surface remeshing in arbitrary codimensions},
@@ -565,13 +565,13 @@
 }
 
 
-
 @inproceedings{Cao2010,
   title     = {Point cloud skeletons via {Laplacian} based contraction},
   author    = {Cao, Junjie and Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Su, Zhinxun},
   booktitle = SMI,
   year      = {2010}
 }
+
 
 
 @article{Cao2014,
@@ -617,13 +617,14 @@
 }
 
 
-
 @inproceedings{Chan2022,
   author    = {Eric R. Chan and Connor Z. Lin and Matthew A. Chan and Koki Nagano and Boxiao Pan and Shalini De Mello and Orazio Gallo and Leonidas Guibas and Jonathan Tremblay and Sameh Khamis and Tero Karras and Gordon Wetzstein},
   title     = {Efficient Geometry-aware {3D} Generative Adversarial Networks},
   booktitle = {CVPR},
   year      = {2022}
 }
+
+
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
@@ -645,7 +646,6 @@
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
-
 
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
@@ -682,6 +682,7 @@
   year      = {2014}
 }
 
+
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -690,7 +691,6 @@
   volume  = {40},
   number  = {4}
 }
-
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -763,13 +763,13 @@
   year      = {2023}
 }
 
+
 @article{Chen2023a,
   title   = {On the importance of noise scheduling for diffusion models},
   author  = {Chen, Ting},
   journal = {arXiv preprint arXiv:2301.10972},
   year    = {2023}
 }
-
 
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
@@ -1043,6 +1043,7 @@
   year      = {2018}
 }
 
+
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
   title   = {Exoskeleton: Curve network abstraction for {3D} shapes},
@@ -1051,7 +1052,6 @@
   volume  = {35},
   number  = {1}
 }
-
 
 @inproceedings{Deitke2023,
   title     = {Objaverse: A universe of annotated {3D} objects},
@@ -1076,13 +1076,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Deng2021,
   title     = {Vector neurons: A general framework for {SO(3)}-equivariant networks},
   author    = {Deng, Congyue and Litany, Or and Duan, Yueqi and Poulenard, Adrien and Tagliasacchi, Andrea and Guibas, Leonidas J.},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @inproceedings{Deng2023,
   title     = {Nerdi: Single-view nerf synthesis with language-guided diffusion as general image priors},
@@ -1141,6 +1141,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
   title     = {Cascaded pose regression},
@@ -1148,7 +1149,6 @@
   year      = {2010},
   publiser  = {IEEE}
 }
-
 
 @inproceedings{Dong2022,
   title     = {{CSWin Transformer}: A general vision transformer backbone with cross-shaped windows},
@@ -1174,13 +1174,14 @@
 }
 
 
-
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
   journal = SA,
   year    = {2018}
 }
+
+
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -1191,7 +1192,6 @@
   number  = {6}
 }
 
-
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
   title   = {Level-of-detail quad meshing},
@@ -1200,6 +1200,7 @@
   volume  = {33},
   number  = {6}
 }
+
 
 @article{Edelsbrunner1994,
   title   = {Three-dimensional alpha shapes},
@@ -1210,7 +1211,6 @@
   year    = {1994}
 }
 
-
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -1219,6 +1219,7 @@
   volume  = {27},
   number  = {5}
 }
+
 
 @inproceedings{Emiel2023,
   author    = {Hoogeboom, Emiel and Heek, Jonathan and Salimans, Tim},
@@ -1234,7 +1235,6 @@
   volume  = {9},
   year    = {2021}
 }
-
 
 @inproceedings{Engelmann2020,
   title     = {{3D-MPA}: Multi-proposal aggregation for {3D} semantic instance segmentation},
@@ -1252,6 +1252,7 @@
   volume  = {11},
   number  = {19}
 }
+
 
 @inproceedings{Erkoc2023,
   title     = {{HyperDiffusion}: Generating Implicit Neural Fields with Weight-Space Diffusion},
@@ -1334,13 +1335,13 @@
   number  = {3}
 }
 
-
 @article{Floater2005,
   title   = {Surface parameterization: a tutorial and survey},
   author  = {Floater, Michael S. and Hormann, Kai},
   journal = {Advances in multiresolution for geometric modelling},
   year    = {2005}
 }
+
 
 @article{Fouss2007,
   title   = {Random-walk computation of similarities between nodes of a graph with application to collaborative recommendation},
@@ -1351,13 +1352,13 @@
   year    = {2007}
 }
 
-
 @inproceedings{Fridovich2022,
   title     = {Plenoxels: Radiance Fields Without Neural Networks},
   author    = {Fridovich-Keil, Sara and Yu, Alex and Tancik, Matthew and Chen, Qinhong and Recht, Benjamin and Kanazawa, Angjoo},
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
@@ -1411,13 +1412,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
   author    = {Genova, Kyle and Cole, Forrester and Sud, Avneesh and Sarna, Aaron and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
@@ -1442,13 +1443,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
+
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -1617,13 +1618,13 @@
   year      = {2010}
 }
 
-
 @inproceedings{Gwak2020,
   title     = {Generative sparse detection networks for {3D} single-shot object detection},
   author    = {Gwak, JunYoung and Choy, Christopher and Savarese, Silvio},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
@@ -1660,8 +1661,6 @@
   year      = {2017}
 }
 
-
-
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
   title   = {{DeepSketch2Face}: A deep learning based sketching system for {3D} face and caricature modeling},
@@ -1670,6 +1669,7 @@
   volume  = {36},
   number  = {4}
 }
+
 
 
 @article{Han2019,
@@ -1681,13 +1681,13 @@
   volume  = {28}
 }
 
+
 @inproceedings{Handa2015,
   title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
   author    = {Ankur Handa and Viorica Patraucean and Vijay Badrinarayanan and Simon Stent and Roberto Cipolla},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
@@ -1708,6 +1708,7 @@
   journal = SIG
 }
 
+
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
   title   = {Context-based coherent surface completion},
@@ -1726,7 +1727,6 @@
   year    = {1996}
 }
 
-
 @inproceedings{Hassani2019,
   title     = {Unsupervised multi-task feature learning on point clouds},
   author    = {Hassani, Kaveh and Haley, Mike},
@@ -1741,6 +1741,7 @@
   journal = {arXiv preprint arXiv:2209.15001},
   year    = {2022}
 }
+
 
 @article{Hassouna2009,
   author  = {M. S. Hassouna and A. A. Farag},
@@ -1951,7 +1952,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Hui2022,
   title     = {Neural Wavelet-Domain Diffusion for {3D} Shape Generation},
   author    = {Hui, Ka-Hei and Li, Ruihui and Hu, Jingyu and Fu, Chi-Wing},
@@ -1977,6 +1977,7 @@
   journal   = {ACM Comput. Surv.},
   articleno = {20}
 }
+
 
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
@@ -2103,7 +2104,6 @@
   number  = {3}
 }
 
-
 @article{Jun2023,
   title   = {{Shap-E}: Generating conditional {3D} implicit functions},
   author  = {Jun, Heewoo and Nichol, Alex},
@@ -2118,6 +2118,7 @@
   booktitle = {New Trends in Databases and Information Systems},
   year      = {2013}
 }
+
 
 @article{Kaick2011,
   author  = {Oliver van Kaick and Hao Zhang and Ghassan Hamarneh and Daniel Cohen-Or},
@@ -2178,7 +2179,6 @@
   year      = {2018}
 }
 
-
 @article{Karacan2013,
   author  = {Karacan, Levent and Erdem, Erkut and Erdem, Aykut},
   title   = {Structure-preserving image smoothing via region covariances},
@@ -2195,6 +2195,7 @@
   booktitle = ICLR,
   year      = {2017}
 }
+
 
 @inproceedings{Karras2019,
   author    = {Karras, Tero and Laine, Samuli and Aila, Timo},
@@ -2344,7 +2345,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Kocher1999,
   author    = {C. Kocher and J. Jaffe and B. Jun},
   booktitle = {Advances in Cryptology},
@@ -2352,6 +2352,7 @@
   year      = {1999},
   volume    = {1666}
 }
+
 
 @article{Kopf2007,
   author  = {Kopf, Johannes and Cohen, Michael F. and Lischinski, Dani and Uyttendaele, Matt},
@@ -2747,7 +2748,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
   author    = {Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
@@ -2762,6 +2762,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2819,7 +2820,6 @@
   publisher = {Nelson Education}
 }
 
-
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
   title     = {Fully convolutional models for semantic segmentation},
@@ -2835,6 +2835,7 @@
   year    = {1987}
 }
 
+
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
   title     = {{Marching Cubes}: A High Resolution {3D} Surface Construction Algorithm},
@@ -2848,7 +2849,6 @@
   booktitle = ICLR,
   year      = {2019}
 }
-
 
 @inproceedings{Lou2021,
   author    = {Luo, Shitong and Hu, Wei},
@@ -2864,6 +2864,7 @@
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
+
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2881,7 +2882,6 @@
   year    = {2022}
 }
 
-
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2889,13 +2889,13 @@
   year      = {2017}
 }
 
+
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
-
 
 @article{Luo2009,
   title   = {Approximating gradients for meshes and point clouds via diffusion metric},
@@ -2912,13 +2912,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Ma2022,
   title     = {Rethinking network design and local geometry in point cloud: A simple residual {MLP} framework},
   author    = {Ma, Xu and Qin, Can and You, Haoxuan and Ran, Haoxi and Fu, Yun},
   booktitle = ICLR,
   year      = {2022}
 }
-
 
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
@@ -2936,6 +2936,7 @@
   number  = {23},
   year    = {2013}
 }
+
 
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
@@ -3316,7 +3317,6 @@
   year      = {2022}
 }
 
-
 @inproceedings{Paszke2019,
   author    = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
   booktitle = NeurIPS,
@@ -3331,6 +3331,7 @@
   title     = {Learning features by watching objects move},
   year      = {2017}
 }
+
 
 @inproceedings{Pauly2001,
   title     = {Spectral processing of point-sampled geometry},
@@ -3348,7 +3349,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Peng2020,
   title     = {Convolutional occupancy networks},
   author    = {Peng, Songyou and Niemeyer, Michael and Mescheder, Lars and Pollefeys, Marc and Geiger, Andreas},
@@ -3363,6 +3363,7 @@
   journal = SIG,
   year    = {2003}
 }
+
 
 @inproceedings{Petronetto2013,
   title     = {Mesh-Free Discrete Laplace--Beltrami Operator},
@@ -3506,7 +3507,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
   author    = {Rahimi, Ali and Recht, Benjamin},
@@ -3524,6 +3524,7 @@
   year    = {2019}
 }
 
+
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -3532,7 +3533,6 @@
   number  = 2,
   year    = 2020
 }
-
 
 @inproceedings{Rakotosaona2021,
   title     = {Learning delaunay surface elements for mesh reconstruction},
@@ -3548,6 +3548,7 @@
   journal = {arXiv preprint arXiv:2204.06125},
   year    = {2022}
 }
+
 
 @article{Raviv2010,
   title   = {Full and partial symmetries of non-rigid shapes},
@@ -3595,7 +3596,6 @@
   year    = {2023}
 }
 
-
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
   title     = {Fully-Convolutional Point Networks for Large-Scale Point Clouds},
@@ -3613,13 +3613,13 @@
   number  = {2-3}
 }
 
+
 @inproceedings{Rezende2015,
   title     = {Variational inference with normalizing flows},
   author    = {Rezende, Danilo and Mohamed, Shakir},
   booktitle = ICML,
   year      = {2015}
 }
-
 
 @inproceedings{Riegler2017,
   author    = {Gernot Riegler and Ali Osman Ulusoy and Andreas Geiger},
@@ -3635,6 +3635,7 @@
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @inproceedings{Rombach2022,
   title     = {High-resolution image synthesis with latent diffusion models},
@@ -3695,7 +3696,6 @@
   year      = {2022}
 }
 
-
 @article{Rustamov2009,
   title   = {Interior distance using barycentric coordinates},
   author  = {Rustamov, Raif M and Lipman, Yaron and Funkhouser, Thomas},
@@ -3705,13 +3705,13 @@
   year    = {2009}
 }
 
+
 @inproceedings{Rusu2011,
   title     = {{3D} is Here: Point Cloud Library ({PCL})},
   author    = {Rusu, Radu Bogdan and Cousins, Steve},
   booktitle = {IEEE international conference on robotics and automation},
   year      = {2011}
 }
-
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -3727,6 +3727,7 @@
   booktitle = NeurIPS,
   year      = {2022}
 }
+
 
 @article{Saharia2022a,
   title   = {Image super-resolution via iterative refinement},
@@ -3773,13 +3774,13 @@
   year      = {2004}
 }
 
-
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
   booktitle = {Applications of Computer Vision (WACV)},
   year      = {2015}
 }
+
 
 @inproceedings{Schmidt2006,
   author    = {Schmidt, Ryan and Grimm, Cindy and Wyvill, Brian},
@@ -3788,7 +3789,6 @@
   booktitle = {SIGGRAPH}
 }
 
-
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
   title   = {Cascades of regression tree fields for image restoration},
@@ -3796,6 +3796,14 @@
   year    = {2016},
   volume  = {38},
   number  = {4}
+}
+
+
+@inproceedings{Schuhmann2022,
+  title     = {{LAION-5B}: An open large-scale dataset for training next generation image-text models},
+  author    = {Schuhmann, Christoph and Beaumont, Romain and Vencu, Richard and Gordon, Cade and Wightman, Ross and Cherti, Mehdi and Coombes, Theo and Katta, Aarush and Mullis, Clayton and Wortsman, Mitchell and others},
+  booktitle = NeurIPS,
+  year      = {2022}
 }
 
 
